fix: align header image with text

--- a/blog-dev/src/style.css
+++ b/blog-dev/src/style.css
@@ -365,10 +365,6 @@ a:focus {
   border-radius: 100%;
 }
 
-.blog-post .gatsby-resp-image-wrapper {
-  max-width: 100% !important;
-}
-
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
 }
